<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pantry"
            android:icon="@drawable/ic_menu_pantry"
            android:title="@string/menu_pantry" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_menu_recipes"
            android:title="@string/menu_recipes" />
        <item
            android:id="@+id/nav_shoppinglist"
            android:icon="@drawable/ic_menu_shoppinglist"
            android:title="@string/menu_shoppinglist" />
    </group>
</menu>