<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="124dp">

        <TextView
            android:id="@+id/add_item_to_pantry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/add_item_to_pantry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/name_of_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/name_of_ingredient"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/add_ingredient_but"
                android:layout_weight=".75"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:text="@string/action_add" />
        </LinearLayout>

        <Button
            android:id="@+id/add_pantry_done_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="100dp"
            android:text="@string/add_pantry_done" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>