<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="145dp">

        <LinearLayout
            android:id="@+id/shop_list_add_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/shop_list_add_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="50dp"
                android:layout_margin="15dp"
                android:text="@string/menu_shoppinglist" />

            <LinearLayout
                android:id="@+id/horizonatal_layout_shop_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/shop_list_add_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".75"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/shop_list_hint" />

                <Button
                    android:id="@+id/shop_list_add_but"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight=".25"
                    android:text="@string/action_add" />

            </LinearLayout>

            <Button
                android:id="@+id/shop_list_add_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/add_pantry_done" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>