<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shoppinglist.ShoppingListFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/shoppinglist_scroll">

        <LinearLayout
            android:id="@+id/shop_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/shop_list_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:textSize="25dp"
                android:gravity="center"
                android:text="@string/menu_shoppinglist" />

            <LinearLayout
                android:id="@+id/shop_list_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/shop_list_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:completionThreshold="1"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:hint="@string/search_title" />

                <Button
                    android:id="@+id/shop_list_search_but"
                    android:layout_width="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_height="wrap_content"
                    android:text="@string/search_title" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/shop_list_remove_but_hlo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/shop_list_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:text="@string/action_remove"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/shop_list_to_pantry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="15dp"
                    android:text="@string/move_to_pantry"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>