<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="227dp">

        <LinearLayout
            android:id="@+id/home_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/favorites_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15sp"
                android:gravity="center"
                android:text="@string/favorites_header"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/home_horiz_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/home_search_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:completionThreshold="1"
                    android:gravity="center"
                    android:hint="@string/search_title" />

                <Button
                    android:id="@+id/home_search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0"
                    android:text="@string/search_title" />

            </LinearLayout>

            <Button
                android:id="@+id/cameraButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:drawableLeft="@android:drawable/ic_menu_camera"
                android:onClick="cameraButton"
                android:text="Share your Creation" />

            <GridLayout
                android:id="@+id/recipeGridHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </GridLayout>

            <Button
                android:id="@+id/home_clear_but"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/clear" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>